# Flam-AI-Assessment

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/java/com/example/andro/: MainActivity.kt  MyGLRenderer.kt  NativeBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gl/: Base64.h  CameraRenderer.cpp  CameraRenderer.h  FrameServer.cpp  FrameServer.h
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  native-lib.cpp
web/: index.html  style.css
web/src/: main.ts  style.css
